Bug 44277 - [GM965 SNA] LibreOffice/Skype corruption
Summary: [GM965 SNA] LibreOffice/Skype corruption
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-29 08:50 UTC by Roman Jarosz
Modified: 2012-01-28 11:11 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Office (194.75 KB, image/png)
2011-12-29 08:50 UTC, Roman Jarosz
no flags Details
Black background in skype (22.21 KB, image/png)
2011-12-29 09:04 UTC, Roman Jarosz
no flags Details
Small corruption (31.83 KB, image/png)
2012-01-07 01:47 UTC, Roman Jarosz
no flags Details
Black border around selection (22.58 KB, image/png)
2012-01-07 02:49 UTC, Roman Jarosz
no flags Details

Description Roman Jarosz 2011-12-29 08:50:12 UTC
Created attachment 54943 [details]
Office

Using latest git 0dc5c0651cb691fb8811cdf3075b3d322f9d37f8 sna: Tune disarming of the scanout flush timer

KDE, with compositing disabled in kwin.

00:02.1 Display controller: Intel Corporation Mobile GM965/GL960 Integrated
Graphics Controller (rev 0c)
Linux kedge 3.1.5 #1 SMP Sun Dec 11 16:13:13 CET 2011 x86_64 Intel(R) Core(TM)2
Duo CPU T8100 @ 2.10GHz GenuineIntel GNU/Linux
Comment 1 Roman Jarosz 2011-12-29 09:04:08 UTC
Created attachment 54944 [details]
Black background in skype

I've wiped out the contact list, but you can see the wrong black background, also sometimes there are black stripes (approximately 10x1 pixels) all over the window (that's not on the screenshot)
Comment 2 Chris Wilson 2011-12-31 09:24:17 UTC
I think the corruption you are observing here should be fixed by

commit a1f585a3d0ae72e896684f62960a9ae96dc259f5
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sat Dec 31 12:43:04 2011 +0000

    sna: Update pixmap->devKind for GTT mappings
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 3 Roman Jarosz 2012-01-01 04:37:26 UTC
I didn't test it much but so far I didn't see the black background in skype.
But I still see black corruption when moving mouse over taskbar, it looks like the screen is redrawn before the image is ready ... you can see it in the video http://algoritmy.praguesoft.cz/intel/capt.ogv ... in the video the corruption is only sometimes but in realtime it's almost always.
Comment 4 Roman Jarosz 2012-01-01 04:44:49 UTC
Pressed send too soon, the black background still popups in skype.
Comment 5 Chris Wilson 2012-01-05 07:41:39 UTC
I found a silly bug in the damage tracking, and I shall be optimistic that it fixes this more recent issue and the original libreoffice corruption. Can you please retest with master and let me know if things are gradually improving, thanks.
Comment 6 Roman Jarosz 2012-01-07 01:47:44 UTC
Created attachment 55232 [details]
Small corruption

Things are improving ;) but still there is small corruption (see screenshot) this corruption is permanent, so I can't remove it moving other window over it, I have to scroll the corrupted "text" behind the window border and show it again and then it's ok.
Comment 7 Roman Jarosz 2012-01-07 01:50:51 UTC
Btw. I also saw https://bugs.freedesktop.org/show_bug.cgi?id=43134 in gimp using todays GIT, but cannot reproduce it
Comment 8 Chris Wilson 2012-01-07 02:14:18 UTC
That looks like corruption of the glyph mask as we upload it, hence it will be permanent until that glyph string is redrawn. That's likely I'm not honouring some restriction on textures for the small temporary surface created for that glyph string.

I too have glimpsed the marching ants bug once and have not seen it repeated. Thanks for letting me know that I'm not hallucinating. :(
Comment 9 Roman Jarosz 2012-01-07 02:49:40 UTC
Created attachment 55233 [details]
Black border around selection

About the gimp, I cannot check if it's not gimp bug, but I see black 1px border around the selection when zoom isn't 100%.
Comment 10 Roman Jarosz 2012-01-07 03:03:09 UTC
Comment on attachment 55233 [details]
Black border around selection

Discard this, it's gimp bug
Comment 11 Chris Wilson 2012-01-07 03:06:18 UTC
Ok, I've only see those aligned, I'll check on the 965gm later. I suspect gimp is just using PolyRectangle and so the source of the off-by-one will be the driver. Again, I'll check the instruction stream later to see if I can indeed blame a bug in gimp...
Comment 12 Chris Wilson 2012-01-07 03:06:30 UTC
Phooey. :-p
Comment 13 Chris Wilson 2012-01-07 10:17:13 UTC
I've pushed a couple of patches to ensure that we do not access beyond the end of the buffer (which is more likely to have hung your gpu) and one to make sure we update the amalgamated blits after freeing a buffer. That is likely to be the issue behind the glyph corruption:

commit 292aebfcdc042b08d3a5a21f839e6aec1175359e
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sat Jan 7 18:09:47 2012 +0000

    sna: Prevent reuse of scanlines after the buffer is destroyed
    
    Once the buffer is destroyed, it may be reallocated with a new pitch. We
    could track handle and pitch, but it is easier to simply restart the
    blit after the buffer is freed.
    
    References: https://bugs.freedesktop.org/show_bug.cgi?id=44277
    References: https://bugs.freedesktop.org/show_bug.cgi?id=44555
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 14 Chris Wilson 2012-01-19 08:50:56 UTC
Some more damage fixes landed... Any news?
Comment 15 Chris Wilson 2012-01-26 12:56:58 UTC
I believe both of these are now fixed. The libreoffice was an example of the broken damage tracking, whereas I believe the skype corruption was the GPU not liking its textures aligned to less than 64bytes.
Comment 16 Roman Jarosz 2012-01-28 03:11:40 UTC
Sorry for late reply, yes this is fixed in current git :)
Comment 17 Chris Wilson 2012-01-28 11:11:34 UTC
\o/ Gradually approaching perfection, I can hope. :)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.